Update blog posts and add parts III and IV (Algorithms and Systems)

--- a/assets/bibliography/albert.bib
+++ b/assets/bibliography/albert.bib
@@ -2534,7 +2534,7 @@ url="https://doi.org/10.1007/978-3-540-71041-7_3"
 
 @inproceedings{yang2024gated,
   IDS={gla},
-  title={Gated {L}inear {A}ttention {T}ransformers with Hardware-Efficient Training},
+  title={Gated Linear Attention Transformers with Hardware-Efficient Training},
   author={Yang, Songlin and Wang, Bailin and Shen, Yikang and Panda, Rameswar and Kim, Yoon},
   booktitle={The International Conference on Machine Learning (ICML)},
   year={2024}
