Update posts (change d-code to standard code block)

--- a/assets/bibliography/albert.bib
+++ b/assets/bibliography/albert.bib
@@ -1567,7 +1567,7 @@ url="https://doi.org/10.1007/978-3-540-71041-7_3"
 
 @inproceedings{gu2020hippo,
   IDS={hippo},
-  title     = {H{I}{P}{P}{O}: Recurrent Memory with Optimal Polynomial Projections},
+  title     = {HIPPO: Recurrent Memory with Optimal Polynomial Projections},
   author    = {Gu, Albert and Dao, Tri and Ermon, Stefano and Rudra, Atri and R{\'{e}}, Christopher},
   booktitle = {Advances in Neural Information Processing Systems (NeurIPS)},
   year = {2020}
@@ -1616,9 +1616,9 @@ url="https://doi.org/10.1007/978-3-540-71041-7_3"
 
 @inproceedings{gu2023train,
   IDS={httyh},
-  title={How to Train Your {H}{I}{P}{P}{O}: State Space Models with Generalized Basis Projections},
+  title={How to Train Your HIPPO: State Space Models with Generalized Basis Projections},
   author={Gu, Albert and Johnson, Isys and Timalsina, Aman and Rudra, Atri and R\'e, Christopher},
-  booktitle={The International Conference on Learning Representations ({ICLR})},
+  booktitle={The International Conference on Learning Representations (ICLR)},
   year={2023}
 }
 
